--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "build": "remix build",
     "dev": "remix dev",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "prettier": "npx prettier --check .",
+    "prettier:fix": "npx prettier --write ."
   },
   "dependencies": {
     "@remix-run/node": "^1.14.0",
@@ -23,9 +25,10 @@
     "@types/react-dom": "^18.0.8",
     "classnames": "^2.3.2",
     "eslint": "^8.27.0",
+    "prettier": "2.8.7",
+    "react-markdown": "^6.0.0",
     "tailwindcss": "^3.2.7",
-    "typescript": "^4.8.4",
-    "react-markdown": "^6.0.0"
+    "typescript": "^4.8.4"
   },
   "engines": {
     "node": ">=14"
